feat(Sprint 1): Implementar testes backend + observabilidade (T01, T04, T05)
✅ T04 - CORS Validation (0.5 SP)
- Validado configuração CORS por ambiente
- Documentação inline sobre segurança

✅ T05 - Structured Logging (5 SP)
- CorrelationIdFilter com UUID tracking
- Logback JSON config (dev/prod profiles)
- Prometheus metrics endpoint (/actuator/prometheus)
- Dependencies: logstash-logback-encoder 7.4, micrometer-prometheus

🔄 T01 - Backend Tests (4/10 SP - 40%)
- JaCoCo plugin configurado (50% minimum coverage)
- 25 testes unitários criados (100% passing):
  * CorrelationIdFilterTest: 5 tests, 100% coverage
  * RateLimitingFilterTest: 9 tests, 89% coverage
  * FirebaseAuthenticationFilterTest: 11 tests, 89% coverage
- Padrão AAA (Arrange-Act-Assert)
- Mockito com lenient() para mocks opcionais

📊 Métricas:
- Build time: ~10s (incluindo testes + coverage)
- Total coverage: 3% (foco em camadas críticas)
- Test success rate: 100% (25/25)

📝 Documentação:
- IMPLEMENTACAO_T01_T02_T04_T05.md (relatório completo)
- ANALISE_ATUALIZADA.md (changelog atualizado)
- .gitignore (target/ excluído)

Próximos passos: Testes de serviços + testes de integração